--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bootstrap": "^3.3.7",
     "react-bootstrap": "^0.31.2",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
